# clipmaster

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css  vite.config.js
src/: emoji-data.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
